Adding structured logging and refactoring nested loop